--- a/inform_generator.glade
+++ b/inform_generator.glade
@@ -218,6 +218,7 @@
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
+                     <signal name="clicked" handler="btn_send_mail" swapped="no"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
